injury prevention mobile change

--- a/src/styles/Stretching.css
+++ b/src/styles/Stretching.css
@@ -30,3 +30,10 @@
   font-size: 30px;
   height: 20px;
 }
+
+@media only screen and (max-width: 768px) {
+  /* For mobile screen: */
+  .stretching-block {
+    margin-bottom: 25%;
+  }
+}
